# GameEngine

./: Cargo.toml  README.md
src/: boxy_world.rs  bsp.rs  drawable.rs  fps.rs  frame.rs  main.rs  motion_model.rs  png_saver.rs  primitives.rs  worlds.rs
src/bsp/: cubic_face_split.rs  tree.rs
src/primitives/: bsp.rs  camera.rs  color.rs  cube.rs  cubic_face.rs  cubic_face2.rs  cubic_face3.rs  cubic_face_split.rs  line.rs  matrix3.rs  object.rs  point.rs  position.rs  projective_coordinates.rs  textures.rs  transformation.rs  vector.rs
src/primitives/bsp/: cubic_face_split.rs  tree.rs
src/primitives/textures/: bw.rs  colored.rs  pixelated.rs  pixelized.rs
