[package]
name = "Doom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.13.0"
winit = "0.28"
winit_input_helper = "0.14"
rand = "*"

# This crate allows to have a dequeu with a fixed-size
bounded-vec-deque = "0.1.1"

# This crate allows to clone a trait object
dyn-clone = "1.0.16"
once_cell = "1.18.0"